fixed wrapping issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -52,6 +52,8 @@ a {
 }
 
 .navbar-drop-item {
+    overflow: hidden;
+    white-space: nowrap;
     text-align: left;
     margin-right: 0;
     color: rgba(255,255,255, 0.8);
